syntax = "proto2";

package com.yimq.common.protobuf.header;

option java_package = "com.yimq.common.protocol.header";
option java_outer_classname = "SendMsgRequestHeaderProto";

message SendMsgRequestHeader {
    optional string topic = 1;
    optional string producerGroup = 2;
    optional int32 queueId = 3;
}